# ImageProc

./: CMakeLists.txt  README.md
cmake/: IMGLib.cmake  ImageProcConfig.cmake
include/: image.hpp
include/ImageProc/: BMPImage.hpp  Image.hpp  TGAImage.hpp
src/ImageProc/: BMPImage.cpp  TGAImage.cpp
src/examples/: writebmp.cpp  writetga.cpp
